<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".presentation.ui.fragment.settingScreen.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_protect_your_wallet"
            style="@style/text_style_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/protect_your_wallet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_protect_your_wallet_description"
            style="@style/text_style_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:gravity="start"
            android:text="@string/protect_your_wallet_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protect_your_wallet" />

        <Button
            android:id="@+id/btn_reveal_secret_recovery_phrase"
            style="@style/text_style_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_50dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:background="@drawable/background_two"
            android:text="@string/reveal_secret_recovery_phrase"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protect_your_wallet_description"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_reveal_secret_recovery_phrase" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/text_style_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/tv_password_description"
            style="@style/text_style_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:gravity="start"
            android:text="@string/password_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_50dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:background="@drawable/background_one"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/blue_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_description"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_change_password" />

        <TextView
            android:id="@+id/tv_show_private_key_for"
            style="@style/text_style_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:text="@string/show_private_key_for"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/tv_show_private_key_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:gravity="start"
            android:text="@string/show_private_key_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_show_private_key_for" />

        <Button
            android:id="@+id/btn_show_privateKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_50dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:layout_marginBottom="@dimen/margin_40dp"
            android:background="@drawable/background_one"
            android:text="@string/show_private_key"
            android:textAllCaps="false"
            android:textColor="@color/blue_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_show_private_key_description"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>